2014-11-03: Original commit
2014-12-01: Changing name to cicserver
2014-12-09: Adding ICSurvey class
2014-12-17: Fixing cicserver-install-run path
2014-12-17: Fixed cic_icws_installed custom fact & minor fixes
2014-12-18: Adding missing loggedonuserpassword parameter
2014-12-19: Finetuning ic server install parameters
2014-12-19: Removing unnecessary files
2014-12-22: Using powershell instead of psexec
2014-12-22: Added ICServer dependency to Setup Assistant
2014-12-23: Fixed survey directory creation
2014-12-23: Using Start-Process to wait for msiexec to finish for CIC server install
2014-12-23: Using powershell script to install CIC server