@@ -1,6 +1,6 @@
 {
   "name": "PierrickL-cicserver",
-  "version": "0.8.2",
+  "version": "0.8.4",
   "author": "pierrick",
   "summary": "Installs CIC server and required software",
   "license": "Apache 2.0",
